Added krisinfo and settings

--- a/THWebExample/appsettings.Production.json
+++ b/THWebExample/appsettings.Production.json
@@ -1,4 +1,10 @@
 {
+  "KrisInfoConfig": {
+    "Url": "http://api-prod.krisinformation.se/v1/themes?format=json",
+    "NrToShow": 3
+  },
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
