--- a/THWebExample/appsettings.json
+++ b/THWebExample/appsettings.json
@@ -1,4 +1,11 @@
 {
+  "ConnectionStrings": {
+    "DefaultConnection": "connsdffsdfsdsfd" 
+  },
+  "KrisInfoConfig": {
+    "Url": "http://api.krisinformation.se/v1/themes?format=json",
+    "NrToShow": 4
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
