InterestSerivce url in appSettings

--- a/THWebExample/appsettings.Production.json
+++ b/THWebExample/appsettings.Production.json
@@ -5,6 +5,13 @@
   },
 
 
+  "SweaWebServiceConfig": {
+    "Url": "https://swea.riksbank.se:443/sweaWS/services/SweaWebServiceHttpSoap12Endpoint"
+  },
+
+
+
+
   "Logging": {
     "LogLevel": {
       "Default": "Information",
