--- a/THWebExample/appsettings.json
+++ b/THWebExample/appsettings.json
@@ -1,7 +1,13 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection": "connsdffsdfsdsfd" 
+    "DefaultConnection": "connsdffsdfsdsfd"
   },
+
+  "SweaWebServiceConfig": {
+    "Url": "https://swea.riksbank.se:443/sweaWS/services/SweaWebServiceHttpSoap12Endpoint"
+  },
+
+
   "KrisInfoConfig": {
     "Url": "http://api.krisinformation.se/v1/themes?format=json",
     "NrToShow": 4
