--- a/THWebExample/appsettings.Development.json
+++ b/THWebExample/appsettings.Development.json
@@ -7,7 +7,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft": "Warning",
+      "HomeController": "Warning",
       "Microsoft.Hosting.Lifetime": "Information"
     }
   }
